--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
     "name": "@pinta365/wasm-deno-boilerplate",
     "version": "0.0.1",
+    "license": "MIT",
     "exports": {
         ".": "./mod.ts"
     },
@@ -9,5 +10,11 @@
     "fmt": {
         "lineWidth": 150,
         "indentWidth": 4
+    },
+    "imports": {
+        "@std/cli": "jsr:@std/cli@^1.0.8",
+        "@std/fmt": "jsr:@std/fmt@^1.0.3",
+        "@std/fs": "jsr:@std/fs@^1.0.6",
+        "@std/path": "jsr:@std/path@^1.0.8"
     }
 }
